--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     },
     "homepage": "https://github.com/crice009/MMM-NOAATides#readme",
     "dependencies": {
-        "chart.js": "^2.5.0"
+        "chart.js": "^2.5.0",
+        "node-fetch": "^2.6.1"
     }
 }
