--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "homepage": "https://github.com/crice009/MMM-NOAATides#readme",
     "dependencies": {
         "chart.js": "^2.5.0",
-        "node-fetch": "^2.6.1"
+        "node-fetch": "^2.6.1",
+        "request": "^2.88.2"
     }
 }
